[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/custom.gd" type="Script" id=1]
[ext_resource path="res://Assets/BackGroundKarya.png" type="Texture" id=2]
[ext_resource path="res://Scripts/custom_btn.gd" type="Script" id=3]
[ext_resource path="res://Assets/BackHover-removebg-preview.png" type="Texture" id=4]
[ext_resource path="res://Assets/BackButton.png" type="Texture" id=5]

[node name="Custom" type="Node2D"]
script = ExtResource( 1 )

[node name="BackgroundLayer" type="CanvasLayer" parent="."]

[node name="Sprite" type="Sprite" parent="BackgroundLayer"]
position = Vector2( 515, 301 )
scale = Vector2( 0.5375, 0.566204 )
texture = ExtResource( 2 )

[node name="KaryaLayer" type="CanvasLayer" parent="."]

[node name="Matahari" type="Node2D" parent="KaryaLayer"]
script = ExtResource( 1 )

[node name="Awan" type="Node2D" parent="KaryaLayer"]
script = ExtResource( 1 )

[node name="Uap" type="Node2D" parent="KaryaLayer"]
script = ExtResource( 1 )

[node name="Hujan" type="Node2D" parent="KaryaLayer"]
script = ExtResource( 1 )

[node name="Perahu" type="Node2D" parent="KaryaLayer"]
script = ExtResource( 1 )

[node name="Burung" type="Node2D" parent="KaryaLayer"]
script = ExtResource( 1 )

[node name="ButtonLayer" type="CanvasLayer" parent="."]

[node name="BackButton" type="TextureButton" parent="ButtonLayer"]
margin_left = 924.0
margin_top = -1.0
margin_right = 1590.0
margin_bottom = 374.0
rect_scale = Vector2( 0.180172, 0.200164 )
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )
script = ExtResource( 3 )

[connection signal="draw" from="KaryaLayer/Matahari" to="KaryaLayer/Matahari" method="_on_Matahari_draw"]
[connection signal="draw" from="KaryaLayer/Awan" to="KaryaLayer/Awan" method="_on_Awan_draw"]
[connection signal="draw" from="KaryaLayer/Uap" to="KaryaLayer/Uap" method="_on_Uap_draw"]
[connection signal="draw" from="KaryaLayer/Hujan" to="KaryaLayer/Hujan" method="_on_Hujan_draw"]
[connection signal="draw" from="KaryaLayer/Perahu" to="KaryaLayer/Perahu" method="_on_Perahu_draw"]
[connection signal="draw" from="KaryaLayer/Burung" to="KaryaLayer/Burung" method="_on_Burung_draw"]
[connection signal="pressed" from="ButtonLayer/BackButton" to="ButtonLayer/BackButton" method="_on_BackButton_pressed"]
